[package]
name = "playeraaaa_like_bangumi_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#m3u8utils = { git = "https://github.com/verssionhack/m3u8utils.git" }
#size_utils = { git = "https://github.com/verssionhack/size_utils.git" }
#timer = { git = "https://github.com/verssionhack/timer.git" }
m3u8utils = { path = "../m3u8utils" }
size_utils = { path = "../size_utils" }
timer = { path = "../timer" }

reqwest = { version = "0.11.18", features = ["socks", "json", "blocking"] }
tokio = { version = "1.29.1", features = ["full"] }
rust-crypto = "0.2.36"
base64 = "0.21.2"
regex = "1.9.1"
serde_json = "1.0.104"
serde = { version = "1.0.181", features = ["derive"] }
lazy_static = "1.4.0"

